--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-select": "^5.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
