improve state (file objects), add favicon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "JSON and YAML Diff Generator",
+  "name": "Difference Generator for JSON and YML files",
   "icons": [
     {
       "src": "favicon.ico",
